# frequenz-ai-native-task

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  advanced_chunks.jsonl  app.py  app_advanced.py  branding.py  build_advanced_knowledge.py  extract.py  frequenz-floss-frequenz-sdk-python-LLM.txt  project_knowledge.jsonld  project_knowledge_v2.jsonld  pyproject.toml  query.py  requirements.txt  semantic_query.py  test_citations.py  visualize.py
.streamlit/: config.toml
assets/: README.md
assets/diagrams/: sdk_architecture.mmd
data/: knowledge_graph.dot
docs/: marketing_strategy.md
docs/hiring_task/: HiringTask.md
scripts/: run_advanced.sh  run_advanced_app.py  run_basic_app.py  run_enhanced_app.py  run_simple.sh  run_tests.py
src/: ai_integrations.py.backup  extract.py  query.py  query_advanced.py  visualize.py
src/apps/: app.py  app_advanced.py  app_enhanced.py
tests/: test_advanced_query.py  test_compliance.py  test_faq.py  test_query.py  test_streamlit_apps.py
